Fix threads UI in dark mode

--- a/frontend/static/css/components/comments.css
+++ b/frontend/static/css/components/comments.css
@@ -109,19 +109,19 @@
         top: 0;
         left: 50%;
         bottom: 0;
-        border-left: dotted 3px #000;
+        border-left: dotted 3px rgba(128, 128, 128);
         margin-left: -2px;
-        opacity: 0.1;
+        opacity: 0.3;
         transition: opacity .3s;
     }
 
         .comment:hover .thread-ruler {
-            opacity: 0.2;
+            opacity: 0.6;
         }
 
         .comment-side:hover .thread-ruler,
         .reply-side:hover .thread-ruler {
-            opacity: 0.7;
+            opacity: 1;
         }
 
         .thread-ruler-icons {
